--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -31,3 +31,11 @@
 
 en:
   hello: "Hello world"
+  number:
+     currency:
+        format:
+          unit: '€'
+          delimiter: '.'
+          separator: ','
+          precision: 2
+          format: '%u%n'
